# supergraph_example2

./: .env  Cargo.toml  README.md
src/: db.rs  main.rs  models.rs
src/schema/: mod.rs  scalars.rs  subgraph1.rs  subgraph2.rs
