[package]
name = "supergraph_example2"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "4.0"
actix-web = "4.0"
async-graphql-actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-rustls", "macros", "bigdecimal"] }
dotenv = "0.15"
bigdecimal = "0.3"





