[package]
name = "supergraph_example2"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "4.0"
async-graphql-actix-web = "4.0"
actix-web = "4.0"
redis = { version = "0.24", features = ["async-std-comp"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }





